--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Secular+One&display=swap" rel="stylesheet">
     <title>Bistro Bliss</title>
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
@@ -80,13 +83,13 @@
         <img class="w-100 h-100 z-0" src="./assets/images/bg-image.png" alt="-">
 
         <div class="main-content z-1">
-            <div class="content-1 w-25">
-                <h1>Best Food for your taste</h1>
+            <div class="content-1 my-2">
+                <h1 class="">Best Food for your taste</h1>
                 <p>Discover delectable cuisine and unforgettable moments in our welcoming, culinary haven.</p>
             </div>
-            <div class="content-2 w-25">
-                <button class="btn btn-1 rounded-pill" type="button">Book A Table</button>
-                <button class="btn btn-2 btn-outline-dark rounded-pill" type="button">Explore Menu</button>
+            <div class="content-2 mb-2 w-25">
+                <button class="btn btn-1 px-3 rounded-pill" type="button">Book A Table</button>
+                <button class="btn btn-2 px-3 btn-outline-dark rounded-pill" type="button">Explore Menu</button>
             </div>
         </div>
     </div>
